--- a/.env.example
+++ b/.env.example
@@ -29,13 +29,14 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=461415e4db1d8f
+MAIL_PASSWORD=69fd93246249f5
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+
+MAIL_FROM_ADDRESS=yudyrh17@gmail.com
+MAIL_FROM_NAME="Yudy"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
