--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+PAYU_MERCHANT_ID=508029
+PAYU_API_KEY=4Vj8eK4rloUd272L48hsrarnUA
+PAYU_ACCOUNT_ID=512321
+PAYU_CURRENCY=COP
