Cambio de credenciales envio formulario contactanos

--- a/.env.example
+++ b/.env.example
@@ -29,10 +29,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=461415e4db1d8f
-MAIL_PASSWORD=69fd93246249f5
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=857
+MAIL_USERNAME=yudyrh17@gmail.com
+MAIL_PASSWORD=oirqhhvrhbtlynwr
 MAIL_ENCRYPTION=null
 
 MAIL_FROM_ADDRESS=yudyrh17@gmail.com
