--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "darryldecode/cart": "^4.2",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/psr7": "^2.5",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
