--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=MemoriaTodoColor
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://memoriatodocolor.mundosoluciones.com.co/
+APP_URL=http://memoriatodocolor.mundosoluciones.com.co:8001/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
