--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=MemoriaTodoColor
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:hNucXz8OnvTtzeBLH9ivFCIoPABPtaooS7gYfoFY7s4=
 APP_DEBUG=true
-APP_URL=http://memoriatodocolor.mundosoluciones.com.co:8001/
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=admin_memoria
-DB_USERNAME=memoriaColor
-DB_PASSWORD=P~47e0w3v
+DB_DATABASE=memoriatodocolor
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
